Missing parts of module 7

--- a/7-Next-Generation-Sequencing.ipynb
+++ b/7-Next-Generation-Sequencing.ipynb
@@ -256,9 +256,83 @@
     "mkdir -p results/vcf\n",
     "```\n",
     "\n",
-    "Let's start with a single sample: SRR097977.fastq, but later, \n",
+    "Let's start with a single sample: SRR097977.fastq.  Later, we'll discuss how you would automate this for *all* samples.\n",
     "\n",
-    "Credits to: https://github.com/JasonJWilliamsNY and DataCarpentry for the exercises."
+    "Let's define some variables to make it easier to see what's going on with the commands we'll use below:\n",
+    "```\n",
+    "base=$(basename trimmed_fastq/SRR097977.fastq .fastq)\n",
+    "fq=data/trimmed_fastq/$base\\.fastq\n",
+    "sai=results/sai/$base\\_aligned.sai\n",
+    "sam=results/sam/$base\\_aligned.sam\n",
+    "bam=results/bam/$base\\_aligned.bam\n",
+    "sorted_bam=results/bam/$base\\_aligned_sorted.bam\n",
+    "raw_bcf=results/bcf/$base\\_raw.bcf\n",
+    "variants=results/bcf/$base\\_variants.bcf\n",
+    "final_variants=results/vcf/$base\\_final_variants.vcf   \n",
+    "```\n",
+    "\n",
+    "1. Align the reads to the reference genome\n",
+    "```\n",
+    "bwa aln $genome $fq > $sai\n",
+    "```\n",
+    "\n",
+    "2. Convert the output to SAM format (uncompressed alignment)\n",
+    "```\n",
+    "bwa samse $genome $sai $fq > $sam\n",
+    "```\n",
+    "\n",
+    "3. Convert the SAM file to BAM (compressed) format\n",
+    "```\n",
+    "samtools view -S -b $sam > $bam\n",
+    "```\n",
+    "\n",
+    "4. Sort the BAM file (usually by chromosome)\n",
+    "```\n",
+    "samtools sort -f $bam $sorted_bam\n",
+    "```\n",
+    "\n",
+    "5. Index the BAM file (where each chromosome is in the sequence)\n",
+    "```\n",
+    "samtools index $sorted_bam\n",
+    "```\n",
+    "\n",
+    "6. Count the read coverage as a preliminary step to variant calling\n",
+    "```\n",
+    "samtools mpileup -g -f $genome $sorted_bam > $raw_bcf\n",
+    "```\n",
+    "\n",
+    "7. Call the SNVs\n",
+    "```\n",
+    "bcftools view -bvcg $raw_bcf > $variants\n",
+    "```\n",
+    "\n",
+    "8. Filter the SNVs to get a final output\n",
+    "```\n",
+    "bcftools view $variants | /usr/share/samtools/vcfutils.pl varFilter - > $final_variants\n",
+    "```\n",
+    "\n",
+    "Nicely done! But you have 5 samples remaining, how would you automate this process?\n",
+    "\n",
+    "TIP: bash has *loops*, which follow the syntax\n",
+    "```\n",
+    "for x in y\n",
+    "do \n",
+    "    <command(s)>\n",
+    "done\n",
+    "```\n",
+    "\n",
+    "You could write a bash script that starts with:\n",
+    "```\n",
+    "for fq in trimed_fastq/*.fastq\n",
+    "do\n",
+    "    <all the above commands>\n",
+    "done\n",
+    "```\n",
+    "\n",
+    "Use `less` or `head` to examine your VCF files located in **results/vcf**.  Write a short explanation for what you think is stored in this file and what format it is in.\n",
+    "\n",
+    "\n",
+    "Credits for this exercise: https://github.com/JasonJWilliamsNY and DataCarpentry."
    ]
   },
   {
@@ -267,15 +341,6 @@
    "source": [
     "NIH BD2K Center for Big Data in Translational Genomics, UCSC Genomics Institute"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
