--- a/7-Next-Generation-Sequencing.ipynb
+++ b/7-Next-Generation-Sequencing.ipynb
@@ -139,7 +139,7 @@
     "\n",
     "This technique creates *millions* of clusters which are then sequenced:\n",
     "\n",
-    "<img src=images/sbs.svg width=600>\n",
+    "<img src=images/sbs.png width=600>\n",
     "<center> http://binf.snipcademy.com/lessons/ngs-techniques/illumina-solexa </center>\n",
     "\n",
     "In parallel, these millions of clusters are sequenced to produce *reads*. SBS is popular due to its throughput (how fast can these genomes be sequenced), its accuracy (99.9%), and its cost."
