--- a/7-Next-Generation-Sequencing.ipynb
+++ b/7-Next-Generation-Sequencing.ipynb
@@ -78,7 +78,7 @@
     "\n",
     "But arguably just as important, was the discovery that DNA itself is the genetic material of life which happened just one year prior (1952).\n",
     "\n",
-    "<img src=images/hershey_chase_experiment.png width=600>\n",
+    "<img src=images/hc_exp.png width=600>\n",
     "<center> By Thomasione - Modified from German Wikipedia [1], GFDL, https://commons.wikimedia.org/w/index.php?curid=15034881 </center>\n",
     "\n",
     "\n",
